# sdks

./: README.md  build.sh
client-android/: README.md
client-android/.openapi-generator/: FILES
client-apex/: README.md
client-apex/.openapi-generator/: FILES
client-c/: CMakeLists.txt  README.md
client-c/.openapi-generator/: FILES
client-c/api/: AMQPAPI.c  AMQPAPI.h  AccountAPI.c  AccountAPI.h  AchievementAPI.c  AchievementAPI.h  ActivityAPI.c  ActivityAPI.h  AlbumAPI.c  AlbumAPI.h  AnalyticsAPI.c  AnalyticsAPI.h  AppDataAPI.c  AppDataAPI.h  ApplicationAPI.c  ApplicationAPI.h  ApplicationConfigAPI.c  ApplicationConfigAPI.h  AssetAPI.c  AssetAPI.h  AssignmentAPI.c  AssignmentAPI.h  AudienceAPI.c  AudienceAPI.h  BidAPI.c  BidAPI.h  BillableEntityAPI.c  BillableEntityAPI.h  BillingInfoAPI.c  BillingInfoAPI.h  CSVImportAPI.c  CSVImportAPI.h  CargoTypeAPI.c  CargoTypeAPI.h  CarrierAPI.c  CarrierAPI.h  CategoryAPI.c  CategoryAPI.h  ConnectionAPI.c  ConnectionAPI.h  (+156 more)
client-c/include/: apiClient.h
client-c/model/: account.c  account.h  account_list_response.c  account_list_response.h  account_login_response.c  account_login_response.h  account_mini_response.c  account_mini_response.h  account_profile_info.c  account_profile_info.h  account_response.c  account_response.h  account_short_response.c  account_short_response.h  achievement_progress_response.c  achievement_progress_response.h  achievement_response.c  achievement_response.h  achievement_short_response.c  achievement_short_response.h  achievement_tier_response.c  achievement_tier_response.h  activity_response.c  activity_response.h  address.c  address.h  address_response.c  address_response.h  age_group_response.c  age_group_response.h  album.c  album.h  album_contest_list_response.c  album_contest_list_response.h  album_contest_response.c  album_contest_response.h  album_full_response.c  album_full_response.h  album_response.c  album_response.h  (+646 more)
client-c/src/: apiClient.c
client-clojure/: project.clj
client-clojure/.openapi-generator/: FILES
client-cpp-restsdk/: CMakeLists.txt  README.md
client-cpp-restsdk/.openapi-generator/: FILES
client-cpp-restsdk/src/: AnyType.cpp  ApiClient.cpp  ApiConfiguration.cpp  ApiException.cpp  HttpContent.cpp  JsonBody.cpp  ModelBase.cpp  MultipartFormData.cpp  Object.cpp
client-csharp/: Org.OpenAPITools.sln
client-csharp/.openapi-generator/: FILES
client-csharp/api/: openapi.yaml
client-dart/: README.md
client-dart/.openapi-generator/: FILES
client-dart/lib/: api.dart  api_client.dart
client-gdscript/: README.md
client-gdscript/.openapi-generator/: FILES
client-gdscript/apis/: AMQPApi.gd  AccountApi.gd  AchievementApi.gd  ActivityApi.gd  AlbumApi.gd  AnalyticsApi.gd  AppDataApi.gd  ApplicationApi.gd  ApplicationConfigApi.gd  AssetApi.gd  AssignmentApi.gd  AudienceApi.gd  BidApi.gd  BillableEntityApi.gd  BillingInfoApi.gd  CSVImportApi.gd  CargoTypeApi.gd  EventApi.gd  (+80 more)
client-go/: README.md  api_account.go  api_achievement.go  api_activity.go  api_album.go  api_amqp.go  api_analytics.go  api_app_data.go  api_application.go  api_application_config.go  api_asset.go  api_assignment.go  api_audience.go  api_bid.go  api_billable_entity.go  api_billing_info.go  api_cargo_type.go  api_carrier.go  api_category.go  api_connection.go  api_contest.go  api_creative.go  api_csv_import.go  api_dependent.go  api_disbursement.go  api_employee.go  api_event.go  api_facebook.go  api_favorite.go  api_filter.go  api_flag.go  api_game.go  api_game_level.go  api_invite.go  api_leaderboard.go  api_like.go  api_listing.go  api_location.go  api_location_api_v2.go  api_media.go  (+406 more)
client-groovy/: README.md  build.gradle
client-java/: README.md  build.gradle  build.sbt  pom.xml
client-javascript/: README.md  package.json
client-kotlin/: README.md
client-objc/: OpenAPIClient.podspec  README.md
client-perl/: README.md
client-php/: README.md  composer.json
client-python/: README.md  pyproject.toml  setup.py
client-r/: DESCRIPTION  NAMESPACE  README.md
client-ruby/: README.md  openapi_client.gemspec
client-rust/: Cargo.toml  README.md
client-rust/.openapi-generator/: FILES
client-rust/src/apis/: account_api.rs  achievement_api.rs  activity_api.rs  album_api.rs  amqp_api.rs  analytics_api.rs  app_data_api.rs  application_api.rs  application_config_api.rs  asset_api.rs  assignment_api.rs  audience_api.rs  bid_api.rs  billable_entity_api.rs  billing_info_api.rs  cargo_type_api.rs  carrier_api.rs  category_api.rs  configuration.rs  connection_api.rs  contest_api.rs  creative_api.rs  csv_import_api.rs  dependent_api.rs  disbursement_api.rs  employee_api.rs  event_api.rs  facebook_api.rs  favorite_api.rs  filter_api.rs  flag_api.rs  game_api.rs  game_level_api.rs  invite_api.rs  leaderboard_api.rs  like_api.rs  listing_api.rs  location_api.rs  location_api_v2_api.rs  media_api.rs  (+60 more)
client-rust/src/models/: account.rs  account_list_response.rs  account_login_response.rs  account_mini_response.rs  account_profile_info.rs  account_response.rs  account_short_response.rs  achievement_progress_response.rs  achievement_response.rs  achievement_short_response.rs  achievement_tier_response.rs  activity_response.rs  address.rs  address_response.rs  age_group_response.rs  album.rs  album_contest_list_response.rs  album_contest_response.rs  album_full_response.rs  album_response.rs  answer_response.rs  app_info_response.rs  app_response.rs  app_version.rs  application.rs  application_config_response.rs  application_mini_response.rs  application_response.rs  application_settings_response.rs  application_short_response.rs  application_usage_response.rs  asset.rs  asset_full_response.rs  asset_list_response.rs  asset_response.rs  asset_short_response.rs  assignment.rs  assignment_response.rs  assignment_status.rs  assignment_status_response.rs  (+304 more)
client-scala-akka/: README.md
client-swift6/: OpenAPIClient.podspec  README.md  project.yml
client-typescript-angular/: README.md  api.base.service.ts  configuration.ts
client-typescript-axios/: base.ts  common.ts  configuration.ts  index.ts
(+11064 files in other folders)
